fix(admin-checkout): properly show data in admin, checkout question mobile optimization

--- a/src/app/checkout-page/questionnaire/questionnaire.component.scss
+++ b/src/app/checkout-page/questionnaire/questionnaire.component.scss
@@ -30,6 +30,22 @@
   }
 }
 
+.quest_msg-bottom {
+  width: 55vw;
+  text-align: center;
+  font-size: 1vw;
+  font-weight: $regular;
+
+  white-space: pre-line;
+
+  @media screen and (max-width: 960px) {
+    font-size: 14px;
+    white-space: normal;
+    padding: 20px 0;
+    min-height: 55px;
+  }
+}
+
 .upload__info {
   font-size: 0.9vw;
   font-weight: 400;
